--- a/settings.json
+++ b/settings.json
@@ -7,12 +7,12 @@
 	"anticall": false,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "62887435047326",
-	"ownerNumberr": "62887435047326",
-	"cr": "@ZeeoneOfc",
-	"ownername": "ZeeoneOfc",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ",
+	"ownerNumber": "6283174170613",
+	"ownerNumberr": "6283174170613",
+	"cr": "@Radhin mods",
+	"ownername": "Dean X Radhin",
+	"botname":"Ａʟᴘʜᴀʙᴏᴛ-V11",
 	"thumb":"thumbnail_1.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ  」\nCreated By @ZeeoneOfc"
+	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ-V11  」\nCreated By @Radhin mods"
 }
