--- a/settings.json
+++ b/settings.json
@@ -13,6 +13,6 @@
 	"ownername": "Dean X Radhin",
 	"botname":"Ａʟᴘʜᴀʙᴏᴛ-V11",
 	"thumb":"thumbnail_1.jpg",
-	"fakethumb":"thumbnail_1.jpg", 
+	"fakethumb":"IMG-20210609-WA0124.jpg", 
 	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ-V11  」\nCreated By @Radhin mods"
 }
