--- a/settings.json
+++ b/settings.json
@@ -12,7 +12,7 @@
 	"cr": "@Radhin mods",
 	"ownername": "Dean X Radhin",
 	"botname":"Ａʟᴘʜᴀʙᴏᴛ-V11",
-	"thumb":"thumbnail_1.jpg",
+	"thumb":"IMG-20210609-WA0124.jpg",
 	"fakethumb":"IMG-20210609-WA0124.jpg", 
 	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ-V11  」\nCreated By @Radhin mods"
 }
