--- a/settings.json
+++ b/settings.json
@@ -7,10 +7,10 @@
 	"anticall": false,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "6283174170613",
-	"ownerNumberr": "6283174170613",
+	"ownerNumber": "6282143611364",
+	"ownerNumberr": "6282143611364",
 	"cr": "@Radhin mods",
-	"ownername": "Dean X Radhin",
+	"ownername": "Zeeone X Radhin",
 	"botname":"Ａʟᴘʜᴀʙᴏᴛ-V11",
 	"thumb":"IMG-20210609-WA0124.jpg",
 	"fakethumb":"IMG-20210609-WA0124.jpg", 
