--- a/settings.json
+++ b/settings.json
@@ -1,18 +1,18 @@
 {
     "self_mode": false,
-	"autobio": false,
+	"autobio": true,
 	"antihidetag": true,
-	"user_register": false,
-	"anti_delete" : false,
-	"anticall": false,
+	"user_register": true,
+	"anti_delete" : true,
+	"anticall": true,
 	"prefix": ".",
 	"language":"ind",
 	"ownerNumber": "6282143611364",
 	"ownerNumberr": "6282143611364",
-	"cr": "@Radhin mods",
-	"ownername": "Zeeone X Radhin",
-	"botname":"Ａʟᴘʜᴀʙᴏᴛ-V11",
+	"cr": "Radhin Al haady & Alya putri zayyan✦",
+	"ownername": "Radhin Al haady & Alya putri zayyan",
+	"botname":"Alya chan bot WhatsApp1",
 	"thumb":"IMG-20210609-WA0124.jpg",
 	"fakethumb":"IMG-20210609-WA0124.jpg", 
-	"fake": " 「  Ａʟᴘʜᴀʙᴏᴛ-V11  」\nCreated By @Radhin mods"
+	"fake": " 「  Alya chan Bot wa  」\nCreated By @Radhin Al haady & Alya putri zayyans"
 }
